<resources>
    <string name="app_name">Notes app</string>
    <string name="name_1">название заметки 1</string>
    <string name="name_2">название заметки 2</string>
    <string name="name_3">название заметки 3</string>
    <string name="name_4">название заметки 4</string>
    <string name="name_5">название заметки 5</string>
    <string name="description_1">описание заметки 1</string>
    <string name="description_2">описание заметки 2</string>
    <string name="description_3">описание заметки 3</string>
    <string name="description_4">описание заметки 4</string>
    <string name="description_5">описание заметки 5</string>
    <string name="date_1">01.02.04</string>
    <string name="date_2">02.09.06</string>
    <string name="date_3">03.08.09</string>
    <string name="date_4">04.08.04</string>
    <string name="date_5">05.01.07</string>
    <string name="note_1">Сама заметка </string>
    <string name="note_2">Сама заметка </string>
    <string name="note_3">Сама заметка </string>
    <string name="note_4">Сама заметка </string>
    <string name="note_5">Сама заметка </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_note_ditals">NoteDitalsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="point_one">Пункт 1</string>
    <string name="point_two">Добавить</string>
    <string name="point_three">Очитить</string>
    <string name="search">лупа</string>
    <string name="fragment_navigation">боковое меню</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
</resources>